# agent-sdk-ific

./: .coverage  .gitignore  APLICACAO_COMPLETA.md  BACKEND_DELIVERY_SUMMARY.md  BACKEND_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FILES_CREATED.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRONTEND_ARCHITECTURE.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  FRONTEND_SUMMARY.md  IFIC_SAAS_CLAUDE_CONFIG.md  IMPLEMENTACAO_FASE_1_COMPLETA.md  INDEX.md  INTEGRATION_FLOW.md  Makefile  ORCHESTRATOR_IMPLEMENTATION.md  PREMIUM_2.0_ARCHITECTURE.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  PROMPTS_COPY_PASTE.md  QUICKSTART.md  QUICKSTART_CLAUDE_CODE.md  README.md  SPRINT_1_FINAL_SUMMARY.md  SPRINT_1_PROGRESS.md  SPRINT_1_PROGRESS_SUMMARY.md  SPRINT_1_RLS_ENFORCEMENT_UPDATE.md  STARTUP_INSTRUCTIONS.md  __init__.py  api_examples.sh  arquitetura_mvp_v4_final.md  claude_code_implementation_v4.md  config.py  custos_roi_realista_v4.md  docker-compose.yml  (+15 more)
backend/: .coverage  .env  .env.example  ARCHITECTURE.md  AUDIT_AGENT_IMPLEMENTATION.md  COMPLIANCE_AGENT_DELIVERABLES.md  DATABASE_SETUP.md  Dockerfile  E2E_TEST_README.md  E2E_TEST_SUMMARY.md  EXCEL_DELIVERY_COMPLETE.md  EXCEL_GENERATOR_SUMMARY.md  FILE_STORAGE_API.md  FILE_STORAGE_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  QUICKSTART_DATABASE.md  README.md  RLS_ENFORCEMENT_GUIDE.md  SEED_DATA_SUMMARY.md  USAGE_INSTRUCTIONS.md  alembic.ini  init_db.sql  main.py  pyproject.toml  requirements.txt  seed_data.py  setup_database.sh  test_connection.py  test_e2e_workflow.py  test_output.txt  test_output_full.txt  test_summary.txt
backend/agents/: AUDIT_AGENT_QUICK_REFERENCE.md  AUDIT_AGENT_README.md  COMPLIANCE_AGENT_SUMMARY.md  COMPLIANCE_AGENT_USAGE.md  INPUT_AGENT_README.md  NARRATIVE_AGENT_IMPLEMENTATION.md  README_NARRATIVE_AGENT.md  __init__.py  audit_agent.py  audit_agent_example.py  compliance_agent.py  compliance_example.py  financial_agent.py  input_agent.py  input_agent_example.py  narrative_agent.py
backend/alembic/: env.py
backend/api/: files.py
backend/core/: config.py  database.py  encryption.py  key_manager.py  logging.py  metrics.py  middleware.py  password_hasher.py  security.py  tenant.py  tracing.py
backend/examples/: narrative_agent_example.py
backend/models/: __init__.py  audit.py  base.py  evf.py  file.py  tenant.py  user.py
backend/regulations/: pt2030_rules.json
backend/schemas/: auth.py  file.py
backend/services/: ARCHITECTURE_DIAGRAM.md  EXCEL_GENERATOR_README.md  EXCEL_QUICK_REF.md  FILE_STORAGE_QUICKSTART.md  FILE_STORAGE_README.md  ORCHESTRATOR_README.md  __init__.py  cache_service.py  excel_generator.py  excel_generator_example.py  file_storage.py  orchestrator.py  orchestrator_example.py  qdrant_service.py  test_orchestrator.py  validate_file_storage.py
backend/tests/: TEST_SUITE_SUMMARY.md  __init__.py  test_audit_agent.py  test_compliance_agent.py  test_excel_generator.py  (+6 more)
(+56 files in other folders)
