[tool.poetry]
name = "fundai"
version = "0.1.0"
description = "AI-powered IFIC funding application system for Portuguese SMEs"
authors = ["AiParaTi <bilal@aiparati.pt>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.39.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
fastapi = "^0.115.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
celery = "^5.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
tenacity = "^9.0.0"
playwright = "^1.48.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
